--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@tailwindcss/vite": "^4.0.5",
+    "pure-react-carousel": "^1.32.0",
     "react": "^19.0.0",
-    "react-bootstrap-typeahead": "^7.0.0-rc.4",
+    "react-bootstrap-typeahead": "^7.0.0-rc.5",
     "react-dom": "^19.0.0",
+    "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^7.1.5",
     "react-scroll": "^1.9.2",
     "zustand": "^5.0.3"
