--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tailwindcss/vite": "^4.0.5",
+    "owl.carousel": "^2.3.4",
     "pure-react-carousel": "^1.32.0",
     "react": "^19.0.0",
     "react-bootstrap-typeahead": "^7.0.0-rc.5",
