--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://Seshuggina.github.io/haschem-bharat"
+  },
+  "homepage": "https://Seshuggina.github.io/haschem-bharat",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tailwindcss/vite": "^4.0.5",
+    "gh-pages": "^6.3.0",
     "owl.carousel": "^2.3.4",
     "pure-react-carousel": "^1.32.0",
     "react": "^19.0.0",
