--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tailwindcss/vite": "^4.0.5",
+    "@types/node": "^22.13.14",
     "gh-pages": "^6.3.0",
     "owl.carousel": "^2.3.4",
     "pure-react-carousel": "^1.32.0",
