--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
     "sass-embedded": "^1.85.0",
+    "sitemap": "^8.0.1",
     "tailwindcss": "^4.0.5",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
